--- a/css/plc.css
+++ b/css/plc.css
@@ -200,6 +200,8 @@ background: white;
 #welcome-text{
     padding-bottom: 20px;
     padding: 28px;
+    position: relative;
+    bottom: 30px
 }
 
 #welcome-image{
@@ -397,7 +399,7 @@ background: white;
 
 @media (max-width: 1272px) {
     #nav-links li a{
-        font-size: 20px;
+        font-size: 25px;
     }
     
     #navbar-title{
@@ -408,7 +410,7 @@ background: white;
 
 @media (max-width: 1078px) {
     #nav-links li a{
-        font-size: 15px;
+        font-size: 20px;
     }
     
     #navbar-title{
